Perkin-UAT/force-app/main/default/objects/SAP_Pricing_Condition__mdt/SAP_Pricing_Condition__mdt.object-meta.xml
<CustomObject>
    <description>Object for SAP Pricing Condition Codes</description>
    <label>SAP Pricing Condition</label>
    <pluralLabel>SAP Pricing Conditions</pluralLabel>
</CustomObject>