Perkin-UAT/force-app/main/default/objects/SAP_Pricing_Condition__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Field for storing Conditions Codes created by PWC SC-492</description>
    <label>Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>