Perkin-UAT/force-app/main/default/objects/SAP_Pricing_Condition__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Field for storing Conditions Description created by PWC SC-492</description>
    <label>Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>