Perkin-UAT/force-app/main/default/objects/SAP_Pricing_Condition__mdt/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for storing Conditions Codes created by PWC SC-492 if true is mostly used code</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>